dfd36070cecb13eb58b89bf02d80b17b27bc6b16

--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
 </li>
 <li><a href="#ide">11.4. IDE</a>
 <ul class="sectlevel3">
-<li><a href="#vim">11.4.1. vim</a></li>
+<li><a href="#vim">11.4.1. Vim</a></li>
 </ul>
 </li>
 <li><a href="#systems-programming">11.5. Systems programming</a>
@@ -842,7 +842,7 @@
 <p>Distro: latest <a href="#ubuntu">Ubuntu</a> release</p>
 </li>
 <li>
-<p>Vim or Emacs: Vim. But for The Love, will someone please make an open source C++ <a href="#ide">IDE</a> that actually just works?</p>
+<p><a href="#vim">Vim</a> or Emacs: Vim. But for The Love, will someone please make an open source C++ <a href="#ide">IDE</a> that actually just works?</p>
 </li>
 <li>
 <p>Tabs or spaces: spaces</p>
@@ -1283,7 +1283,7 @@ hello /root/.profile                                                            
 </div>
 </li>
 <li>
-<p>Vim: sometimes Ciro goes crazy and wasted his time with Vimscript:</p>
+<p><a href="#vim">Vim</a>: sometimes Ciro goes crazy and wasted his time with Vimscript:</p>
 <div class="ulist">
 <ul>
 <li>
@@ -2423,6 +2423,9 @@ committer {committer_name} &lt;{committer_email}&gt; {committer_date_seconds} {c
 <div class="ulist">
 <ul>
 <li>
+<p><a href="https://archive.org/details/@cirosantilli" class="bare">https://archive.org/details/@cirosantilli</a></p>
+</li>
+<li>
 <p><a href="https://commons.wikimedia.org/wiki/User:Cirosantilli2" class="bare">https://commons.wikimedia.org/wiki/User:Cirosantilli2</a></p>
 </li>
 <li>
@@ -2455,9 +2458,6 @@ committer {committer_name} &lt;{committer_email}&gt; {committer_date_seconds} {c
 </li>
 <li>
 <p><a href="https://androidforums.com/members/ciro-santilli.1918307" class="bare">https://androidforums.com/members/ciro-santilli.1918307</a></p>
-</li>
-<li>
-<p><a href="https://archive.org/details/@cirosantilli" class="bare">https://archive.org/details/@cirosantilli</a></p>
 </li>
 <li>
 <p><a href="https://ask.libreoffice.org/en/users/2352/cirosantilli/" class="bare">https://ask.libreoffice.org/en/users/2352/cirosantilli/</a></p>
@@ -2772,21 +2772,37 @@ committer {committer_name} &lt;{committer_email}&gt; {committer_date_seconds} {c
 <div class="sect3">
 <h4 id="ciro-santillis-homonyms"><a class="anchor" href="#ciro-santillis-homonyms"></a><a class="link" href="#ciro-santillis-homonyms">1.5.1. Ciro Santilli&#8217;s homonyms</a></h4>
 <div class="paragraph">
-<p>If any of you ever read me, do send me an email to <a href="#ciro-santilli">Ciro Santilli</a> saying hi and we can agree on a clear separation of usernames, although if you are just starting out, maybe you should just go from scratch with a unique internet alias.</p>
+<p>If any of you ever read this, do send me an email to <a href="#ciro-santilli">Ciro Santilli</a> saying hi and we can agree on a clear separation of usernames.</p>
 </div>
 <div class="paragraph">
-<p>A younger unrelated Argentinian homonym that can be found through <a href="#google">Google</a>:</p>
+<p>Although if you are just starting out, maybe you should just go from scratch with a unique Internet alias.</p>
+</div>
+<div class="paragraph">
+<p>A younger unrelated Argentinian homonym who likes soccer that can be found through <a href="#google">Google</a>:</p>
 </div>
 <div class="ulist">
 <ul>
 <li>
+<p><a href="https://twitter.com/ciro_santilli" class="bare">https://twitter.com/ciro_santilli</a></p>
+</li>
+<li>
 <p><a href="https://www.facebook.com/profile.php?id=100009065024069" class="bare">https://www.facebook.com/profile.php?id=100009065024069</a></p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>Ciro used to like playing soccer too :-)</p>
+</div>
+<div class="paragraph">
+<p>Unknown:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://twitter.com/cirosantilli7" class="bare">https://twitter.com/cirosantilli7</a></p>
 </li>
 <li>
 <p><a href="https://www.youtube.com/channel/UCY44wYp2nEuhMRBU1kHkdCA" class="bare">https://www.youtube.com/channel/UCY44wYp2nEuhMRBU1kHkdCA</a></p>
-</li>
-<li>
-<p><a href="https://twitter.com/cirosantilli7" class="bare">https://twitter.com/cirosantilli7</a></p>
 </li>
 </ul>
 </div>
@@ -3021,6 +3037,22 @@ committer {committer_name} &lt;{committer_email}&gt; {committer_date_seconds} {c
 <a class="image" href="#jake-likes-onions-slowly"><img src="https://web.archive.org/web/20200303102830/https://pbs.twimg.com/media/DXtGN6tU0AAGnHk?format=jpg&name=large" alt="DXtGN6tU0AAGnHk?format=jpg&amp;name=large" height="500"></a>
 </div>
 <div class="title">Figure 29. Jake Likes Onions "Slowly" cartoon. This is what trying to reach a dream part time feels like. The cartoon reads: "The tiger pursues its prey. Slowly. The human pursues its life goals. Slowly. Very slowly.". <a href="https://twitter.com/jakelikesonions/status/971447358771941376">Source</a>.</div>
+</div>
+<div class="videoblock">
+<div class="title">Video  3. Excerpt from the documentary film "<a href="#steve-jobs">Steve Jobs</a>: Secrets of Life" (1994) by "Silicon Valley Historical Association" published on 2011-10-06. <a href="https://www.youtube.com/watch?v=kYfNvmF0Bqw">Source</a>.</div>
+<div class="content">
+<iframe width="600" height="400" src="https://www.youtube.com/embed/kYfNvmF0Bqw?rel=0" frameborder="0" allowfullscreen></iframe>
+</div>
+</div>
+<div class="quoteblock">
+<blockquote>
+<div class="paragraph">
+<p>When you grow up you tend to get told that the world is the way it is and your life is just to live your life inside the world. Try not to bash into the walls too much. Try to have a nice family life, have fun, save a little money. That&#8217;s a very limited life. Life can be much broader once you discover one simple fact: Everything around you that you call life was made up by people that were no smarter than you. And you can change it, you can influence it… Once you learn that, you&#8217;ll never be the same again.</p>
+</div>
+</blockquote>
+</div>
+<div class="paragraph">
+<p>Of course, <a href="https://en.wikipedia.org/wiki/Survivorship_bias">survivorship bias</a> applies.</p>
 </div>
 </div>
 <div class="sect3">
@@ -3366,6 +3398,9 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 <h4 id="the-css-of-ciro-santillis-website-looks-broken"><a class="anchor" href="#the-css-of-ciro-santillis-website-looks-broken"></a><a class="link" href="#the-css-of-ciro-santillis-website-looks-broken">1.7.5. The CSS of Ciro Santilli&#8217;s website looks broken</a></h4>
 <div class="paragraph">
 <p>That which does not exist, cannot be broken.</p>
+</div>
+<div class="paragraph">
+<p>And of course: <a href="https://motherfuckingwebsite.com" class="bare">https://motherfuckingwebsite.com</a></p>
 </div>
 </div>
 <div class="sect3">
@@ -5883,7 +5918,7 @@ xdg-open http://localhost:4000</pre>
 <p>Created the <a href="#dirac-equation">Dirac Equation</a>, what else do you need to know?!</p>
 </div>
 <div class="videoblock">
-<div class="title">Video  3. Good lecture about Paul Dirac&#8217;s biography by Graham Farmelo given at <a href="#the-royal-society">The Royal Society</a> in 2013</div>
+<div class="title">Video  4. Good lecture about Paul Dirac&#8217;s biography by Graham Farmelo given at <a href="#the-royal-society">The Royal Society</a> in 2013</div>
 <div class="content">
 <iframe width="600" height="400" src="https://www.youtube.com/embed/jPwo1XsKKXg?rel=0" frameborder="0" allowfullscreen></iframe>
 </div>
@@ -6004,7 +6039,7 @@ xdg-open http://localhost:4000</pre>
 <p><a href="https://en.wikipedia.org/wiki/Set_(mathematics)" class="bare">https://en.wikipedia.org/wiki/Set_(mathematics)</a></p>
 </div>
 <div class="paragraph">
-<p>Intuitively: unordered container where all the values are unique, just like C++ ``std::set.</p>
+<p>Intuitively: unordered container where all the values are unique, just like C++ <code>std::set</code>.</p>
 </div>
 <div class="paragraph">
 <p>More precisely for set theory <a href="#formalization-of-mathematics">Formalization of mathematics</a>:</p>
@@ -8403,13 +8438,13 @@ xdg-open http://localhost:4000</pre>
 <p><a href="https://www.folklore.org/ProjectView.py?project=Macintosh&amp;characters=Steve%20Jobs" class="bare">https://www.folklore.org/ProjectView.py?project=Macintosh&amp;characters=Steve%20Jobs</a>: some good anecdotes</p>
 </li>
 <li>
-<p><a href="https://www.youtube.com/watch?v=kYfNvmF0Bqw" class="bare">https://www.youtube.com/watch?v=kYfNvmF0Bqw</a> "The Steve Jobs: Secrets of Life film" by "Silicon Valley Historical Association" published on 2011-10-06</p>
-</li>
-<li>
 <p><a href="https://www.youtube.com/watch?v=FF-tKLISfPE&amp;t=2s" class="bare">https://www.youtube.com/watch?v=FF-tKLISfPE&amp;t=2s</a> Steve Jobs Insult Response</p>
 </li>
 <li>
 <p>there is a close link between disruptive tech, and the desire to find bugs / exploits in systems. Both of them destabilize enterprises. Woz and Jobs started like that: <a href="https://en.wikipedia.org/wiki/Blue_box" class="bare">https://en.wikipedia.org/wiki/Blue_box</a></p>
+</li>
+<li>
+<p>"Try to have a nice family life, have fun, save a little money." quote at: <a href="#dont-be-a-pussy">Section 1.6.3, &#8220;Don&#8217;t be a pussy&#8221;</a>.</p>
 </li>
 </ul>
 </div>
@@ -8523,6 +8558,9 @@ xdg-open http://localhost:4000</pre>
 </li>
 <li>
 <p>the 2019 <a href="#china">Chinese government</a></p>
+</li>
+<li>
+<p>online forums that lock threads after some time like <a href="https://www.reddit.com/">Reddit</a>. Ridiculous, so when new information comes out, we just duplicate all the old comments on a new thread again?</p>
 </li>
 </ul>
 </div>
@@ -8822,7 +8860,7 @@ xdg-open http://localhost:4000</pre>
 <p>Ciro is evaluating some IDEs at: <a href="https://github.com/cirosantilli/ide-test-projects" class="bare">https://github.com/cirosantilli/ide-test-projects</a></p>
 </div>
 <div class="sect3">
-<h4 id="vim"><a class="anchor" href="#vim"></a><a class="link" href="#vim">11.4.1. vim</a></h4>
+<h4 id="vim"><a class="anchor" href="#vim"></a><a class="link" href="#vim">11.4.1. Vim</a></h4>
 <div class="paragraph">
 <p><a href="https://en.wikipedia.org/wiki/Vim_(text_editor)" class="bare">https://en.wikipedia.org/wiki/Vim_(text_editor)</a></p>
 </div>
@@ -10945,7 +10983,7 @@ c' &amp; = \frac{x_2' - x_1'}{t_2' - t_1'} \\
         <div>License: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> unless noted</div>
         <div>Suggestions and corrections: <a href="https://github.com/cirosantilli/cirosantilli.github.io/issues">https://github.com/cirosantilli/cirosantilli.github.io/issues</a></div>
         <div>Website source code: <a href="https://github.com/cirosantilli/cirosantilli.github.io">https://github.com/cirosantilli/cirosantilli.github.io</a></div>
-        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/72c043bdbc4218e91a722732438e1bb135e95c55">72c043bdbc4218e91a722732438e1bb135e95c55</a></div>
+        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/dfd36070cecb13eb58b89bf02d80b17b27bc6b16">dfd36070cecb13eb58b89bf02d80b17b27bc6b16</a></div>
         <div>Cite with: <a href="https://zenodo.org/badge/latestdoi/16453261">this DOI</a></div>
     </footer>
     
