218a676319ae43ad928e8569d82aaee78f6bb85e

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 </ul>
 </li>
 <li><a href="#download-ciros-website-for-offline-viewing">1.7.9. Download Ciro&#8217;s website for offline viewing</a></li>
-<li><a href="#why-ciro-santilli-refers-to-himself-on-the-third-person">1.7.10. Why Ciro Santilli refers to himself on the third person</a></li>
+<li><a href="#why-ciro-santilli-refers-to-himself-in-the-third-person">1.7.10. Why Ciro Santilli refers to himself in the third person</a></li>
 </ul>
 </li>
 <li><a href="#ciro-santillis-skills">1.8. Ciro Santilli&#8217;s skills</a>
@@ -3668,9 +3668,12 @@ xdg-open http://localhost:4000</pre>
 </div>
 </div>
 <div class="sect3">
-<h4 id="why-ciro-santilli-refers-to-himself-on-the-third-person"><a class="anchor" href="#why-ciro-santilli-refers-to-himself-on-the-third-person"></a><a class="link" href="#why-ciro-santilli-refers-to-himself-on-the-third-person">1.7.10. Why Ciro Santilli refers to himself on the third person</a></h4>
+<h4 id="why-ciro-santilli-refers-to-himself-in-the-third-person"><a class="anchor" href="#why-ciro-santilli-refers-to-himself-in-the-third-person"></a><a class="link" href="#why-ciro-santilli-refers-to-himself-in-the-third-person">1.7.10. Why Ciro Santilli refers to himself in the third person</a></h4>
 <div class="paragraph">
 <p>Because when this gets converted to a <a href="#write-free-books-to-get-famous-website">Write free books to get famous website</a> page, it will be easier for people to copy paragraphs/fork and write a canonical page about Ciro.</p>
+</div>
+<div class="paragraph">
+<p>And because <a href="#ciro-santillis-selfish-desires">his name is awesome</a>! :-) Just kidding.</p>
 </div>
 </div>
 </div>
@@ -11205,7 +11208,7 @@ c' &amp; = \frac{x_2' - x_1'}{t_2' - t_1'} \\
         <div>License: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> unless noted</div>
         <div>Suggestions and corrections: <a href="https://github.com/cirosantilli/cirosantilli.github.io/issues">https://github.com/cirosantilli/cirosantilli.github.io/issues</a></div>
         <div>Website source code: <a href="https://github.com/cirosantilli/cirosantilli.github.io">https://github.com/cirosantilli/cirosantilli.github.io</a></div>
-        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/4721541975471cb4c26890dac3a6e0d73b2cc4e6">4721541975471cb4c26890dac3a6e0d73b2cc4e6</a></div>
+        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/218a676319ae43ad928e8569d82aaee78f6bb85e">218a676319ae43ad928e8569d82aaee78f6bb85e</a></div>
         <div>Cite with: <a href="https://zenodo.org/badge/latestdoi/16453261">this DOI</a></div>
     </footer>
     
