848524b0c5dc3088544567b0cae56e92e1a92db4

--- a/index.html
+++ b/index.html
@@ -171,7 +171,11 @@
 <li><a href="#ciro-santillis-ideal-city-to-live-in">1.9.4. Ciro Santilli&#8217;s ideal city to live in</a></li>
 <li><a href="#cirodance">1.9.5. Cirodance</a></li>
 <li><a href="#ciro-santillis-knee">1.9.6. Ciro Santilli&#8217;s knee</a></li>
-<li><a href="#ciro-santillis-sport-practice">1.9.7. Ciro Santilli&#8217;s sport practice</a></li>
+<li><a href="#ciro-santillis-sport-practice">1.9.7. Ciro Santilli&#8217;s sport practice</a>
+<ul class="sectlevel4">
+<li><a href="#ciro-santillis-bike-maintenance-tips-for-beginners">1.9.7.1. Ciro Santilli&#8217;s bike maintenance tips for beginners</a></li>
+</ul>
+</li>
 </ul>
 </li>
 <li><a href="#ciro-santillis-biography">1.10. Ciro Santilli&#8217;s biography</a>
@@ -4192,6 +4196,43 @@ xdg-open http://localhost:4000</pre>
 </div>
 <div class="paragraph">
 <p>Another thought that often comes to Ciro&#8217;s mind is that bicycles are not regular possessions because they break a lot. Rather, they must be seen as a kind of transportation tax that you have to pay to feel amazing riding them rather than feel crappy riding a bus or train.</p>
+</div>
+<div class="sect4">
+<h5 id="ciro-santillis-bike-maintenance-tips-for-beginners"><a class="anchor" href="#ciro-santillis-bike-maintenance-tips-for-beginners"></a><a class="link" href="#ciro-santillis-bike-maintenance-tips-for-beginners">1.9.7.1. Ciro Santilli&#8217;s bike maintenance tips for beginners</a></h5>
+<div class="paragraph">
+<p>Sometimes, these are more than just mechanics, but also have deeper life analogues. The title of <a href="https://en.wikipedia.org/wiki/Zen_and_the_Art_of_Motorcycle_Maintenance">Zen and the Art of Motorcycle Maintenance</a> comes to mind. Sometimes they are just mechanics.</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>correct saddle hight is fundamental, your legs must be almost fully stretched at the bottom position</p>
+</li>
+<li>
+<p>it is impossible to reach the correct tire pressure with (cheap?) hand pumps, their only purpose is to fill up a flat tire so you can get home after a long ride. But a track pump.</p>
+</li>
+<li>
+<p>clean and lube your chain: <a href="https://www.youtube.com/watch?v=KM6mzE5lQ0w" class="bare">https://www.youtube.com/watch?v=KM6mzE5lQ0w</a> The speed benefit is instantaneous and mind blowing. It also greatly improves gear shifting.</p>
+<div class="paragraph">
+<p>This also prevents the chain from rusting, because the lube takes up the place where water would stay, and the muck makes it harder for water to evaporate.</p>
+</div>
+<div class="paragraph">
+<p>This is the most common bike maintenance mistake you see on the streets: people with that high pitched overly dry chain noise.</p>
+</div>
+</li>
+<li>
+<p>when a piece on your bike breaks and has no clear name written on it, you can try to identify it Google images</p>
+</li>
+<li>
+<p>the more you watch YouTube maintenance videos without haste, the more you end up learn random new stuff that unexpectedly saves you later</p>
+</li>
+<li>
+<p>always take one extra clothing layer than what you think you will need in your back pocket or sport bag, especially when time is changing fast in Sprint and Autumn. The weather on the road outside of town can change very quickly!</p>
+</li>
+<li>
+<p>if you took a turn, and it feels wrong, stop to check the map, and possibly backtrack to safety. When it feels wrong, it usually is a bad idea, e.g. roads where cars are too fast/too many</p>
+</li>
+</ul>
+</div>
 </div>
 </div>
 </div>
@@ -8748,7 +8789,7 @@ xdg-open http://localhost:4000</pre>
 <p>One of the least evil of the <a href="https://en.wikipedia.org/wiki/Big_Four_tech_companies">2019 big four</a>, partly because <a href="https://en.wikipedia.org/wiki/Sergey_Brin">Sergey&#8217;s</a> parents fled from the Soviet Union and so he is anti censorship, although they <a href="https://en.wikipedia.org/wiki/Dragonfly_(search_engine)">have been tempted by it</a>.</p>
 </div>
 <div class="paragraph">
-<p>Google only secedes at highly algorithmic tasks or at giving infinite storage to users to then mine their data.</p>
+<p>Google only succeeds at highly algorithmic tasks or at giving infinite storage to users to then mine their data.</p>
 </div>
 <div class="paragraph">
 <p>It is incapable however of adding any obvious useful end user features to most of its products, most of which get terminated and cannot be relied on:</p>
@@ -8756,7 +8797,7 @@ xdg-open http://localhost:4000</pre>
 <div class="ulist">
 <ul>
 <li>
-<p><a href="https://en.wikipedia.org/wiki/Google%2B" class="bare">https://en.wikipedia.org/wiki/Google%2B</a></p>
+<p><a href="https://en.wikipedia.org/wiki/Google+" class="bare">https://en.wikipedia.org/wiki/Google+</a></p>
 </li>
 <li>
 <p><a href="https://en.wikipedia.org/wiki/Picasa" class="bare">https://en.wikipedia.org/wiki/Picasa</a></p>
@@ -11611,7 +11652,7 @@ c' &amp; = \frac{x_2' - x_1'}{t_2' - t_1'} \\
         <div>License: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> unless noted</div>
         <div>Suggestions and corrections: <a href="https://github.com/cirosantilli/cirosantilli.github.io/issues">https://github.com/cirosantilli/cirosantilli.github.io/issues</a></div>
         <div>Website source code: <a href="https://github.com/cirosantilli/cirosantilli.github.io">https://github.com/cirosantilli/cirosantilli.github.io</a></div>
-        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/d644eb2200a0cf6b3a1b0ffc767da277397de8d4">d644eb2200a0cf6b3a1b0ffc767da277397de8d4</a></div>
+        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/848524b0c5dc3088544567b0cae56e92e1a92db4">848524b0c5dc3088544567b0cae56e92e1a92db4</a></div>
         <div>Cite with: <a href="https://zenodo.org/badge/latestdoi/16453261">this DOI</a></div>
     </footer>
     
